# aas-core-meta

./: .gitignore  AUTHORS  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  additional-verbs-in-imperative-mood.txt  atTheEndOfBody.js  base.css  check_init_and_setup_coincide.py  index.html  mypy.ini  precommit.py  pyproject.toml  requirements.txt  setup.py
aas_core3_meta/: __init__.py  v3rc1.py
aas_core_meta/: __init__.py  marker.py  v3.py  v3_1.py  v3_http.py  v3rc1.py  v3rc2.py  verification.py
dev/: pyproject.toml
dev/continuous_integration/: check_init_and_pyproject_consistent.py  mypy.ini  precommit.py  pylint.rc
dev/tests/: common.py  test_v3.py  test_v3_1.py  test_v3rc2.py
htmlgen/: .gitignore  common.py  description.py  for_metamodel.py  main.py  naming.py  pyproject.toml  transpilation.py
htmlgen/htmlgen/: __init__.py  common.py  description.py  for_metamodel.py  main.py  naming.py  transpilation.py
tests/: common.py  test_v3.py  test_v3_1.py  test_v3_http.py  test_v3rc2.py
v3/: AAS_identifiables.html  AAS_referable_non_identifiables.html  AAS_referables.html  AAS_submodel_elements.html  AAS_submodel_elements_as_keys.html  AasIdentifiables.html  AasReferableNonIdentifiables.html  AasReferables.html  AasSubmodelElements.html  AasSubmodelElementsAsKeys.html  AbstractLangString.html  Abstract_lang_string.html  AdministrativeInformation.html  Administrative_information.html  AnnotatedRelationshipElement.html  Annotated_relationship_element.html  AssetAdministrationShell.html  AssetInformation.html  AssetKind.html  Asset_administration_shell.html  Asset_information.html  Asset_kind.html  BCP_47_language_tag.html  BasicEventElement.html  Basic_event_element.html  Bcp47LanguageTag.html  Blob.html  BlobType.html  Blob_type.html  Capability.html  ConceptDescription.html  Concept_description.html  ContentType.html  Content_type.html  DataElement.html  DataSpecificationContent.html  DataSpecificationIec61360.html  DataSpecificationIec61360sForDocumentHaveAppropriateDataType.html  DataSpecificationIec61360sForPropertyOrValueHaveAppropriateDataType.html  DataSpecificationIec61360sForReferenceHaveAppropriateDataType.html  (+253 more)
v3_1/: AasIdentifiables.html  AasReferableNonIdentifiables.html  AasReferables.html  AasSubmodelElements.html  AasSubmodelElementsAsKeys.html  AbstractLangString.html  AdministrativeInformation.html  AnnotatedRelationshipElement.html  AssetAdministrationShell.html  AssetInformation.html  AssetKind.html  BasicEventElement.html  Bcp47LanguageTag.html  Blob.html  BlobType.html  Capability.html  ConceptDescription.html  ContentType.html  DataElement.html  DataSpecificationContent.html  DataSpecificationIec61360.html  DataSpecificationIec61360sForDocumentHaveAppropriateDataType.html  (+131 more)
(+270 files in other folders)
