[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aas-core-meta-dev"
version = "0.0.1"
description = "Develop aas-core-meta."
requires-python = ">=3.9"

dependencies = [
    "black==22.3.0",
    "mypy==0.910",
    "pylint==2.17.0",
    "asttokens>=2.0.8,<3",
    "aas-core-codegen==0.0.16"
]

[tool.setuptools]
packages = [
    "tests",
    "continuous_integration",
]

# NOTE (mristin):
# We put the configuration of mypy and pylint in separate files as it is a nightmare
# to configure them with pyproject.toml not living in the current working directory
# which is the repository root.
